--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -11,7 +11,13 @@
     </div>
   <% end %>
 <div class="responsive-table form-control-">
-  
+  <div class="form-group">
+    <%= f.label 'Portada' %><br>
+    <%= f.text_field :photo %>
+    <%= f.file_field :photo %>
+    <%= f.hidden_field :photo_cache %>
+    <%= image_tag(@book.photo.thumb) if @book.photo? %>
+  </div>
   <div class="form-group">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
