--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,6 +2,8 @@
 <div id="books_show">
   <h1><%= yield :title %></h1>
   <dl class="dl-horizontal">
+    <dt><%=t('Portada') %></dt>
+    <dd><%=@book.photo|| '-' %></dd>
     <dt><%=t('activerecord.attributes.book.title') %></dt>
     <dd><%=@book.title || '-' %></dd>
     <dt><%=t('activerecord.attributes.book.author') %></dt>
